	PR middle-end/79665 	* internal-fn.c (get_range_pos_neg): Moved to ... 	* tree.c (get_range_pos_neg): ... here.  No longer static. 	* tree.h (get_range_pos_neg): New prototype. 	* expr.c (expand_expr_real_2) <case TRUNC_DIV_EXPR>: If both arguments 	are known to be in between 0 and signed maximum inclusive, try to 	expand both unsigned and signed divmod and use the cheaper one from 	those.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@245676 138bc75d-0d04-0410-961f-82ee72b054a4